--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,118 +1,56 @@
 body {
-  // CHECK OUT UIGRADIENTS.COM for more gradients
-  background: #2BC0E4;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #EAECC6, #2BC0E4);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #EAECC6, #2BC0E4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
   font-family: 'Roboto', sans-serif;
 
 }
 
-.card-img-overlay {
+.separatingBanner {
+  background: #085038;
+  color: white;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  font-weight: normal;
+}
+
+.row {
+  align-items: center;
   text-align: center;
 }
 
-.jumbotron {
-  padding: 0px;
-  margin: 0px;
+hr {
+    border: 0;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+    padding-top: 20%;
 }
 
-#bodyContainer {
-  background: #FFFFFF;
+.boxImage {
+  height: auto;
+  width: 40%;;
 }
 
-#mainLogoContainer {
-  width: 100%;
+.boxImage {
+  padding-bottom: 5%;
 }
 
-#mainLogo.card-img-top {
-  width: 100%;
+.alignTop {
+  align-items: baseline;
 }
 
-.hovereffect {
-width:100%;
-height:100%;
-float:left;
-overflow:hidden;
-position:relative;
-text-align:center;
-cursor:default;
+.row{
+    overflow: hidden;
 }
 
-.hovereffect .overlay {
-width:100%;
-height:100%;
-position:absolute;
-overflow:hidden;
-top:0;
-left:0;
-opacity:0;
-background-color:rgba(0,0,0,0.5);
--webkit-transition:all .4s ease-in-out;
-transition:all .4s ease-in-out
+[class*="col-"]{
+    margin-bottom: -99999px;
+    padding-bottom: 99999px;
 }
 
-.hovereffect img {
-display:block;
-position:relative;
--webkit-transition:all .4s linear;
-transition:all .4s linear;
+
+.sectionTitle {
+  padding-top: 5%;
+  padding-bottom: 5%;
+  text-align: center;
 }
 
-.hovereffect h2 {
-text-transform:uppercase;
-color:#fff;
-text-align:center;
-position:relative;
-font-size:17px;
-background:rgba(0,0,0,0.6);
--webkit-transform:translatey(-100px);
--ms-transform:translatey(-100px);
-transform:translatey(-100px);
--webkit-transition:all .2s ease-in-out;
-transition:all .2s ease-in-out;
-padding:10px;
-}
-
-.hovereffect div.details {
-text-decoration:none;
-display:inline-block;
-text-transform:uppercase;
-color:#fff;
-border:1px solid #fff;
-background-color:transparent;
-opacity:0;
-filter:alpha(opacity=0);
--webkit-transition:all .2s ease-in-out;
-transition:all .2s ease-in-out;
-margin:50px 0 0;
-padding:7px 14px;
-}
-
-.hovereffect div.details:hover {
-box-shadow:0 0 5px #fff;
-}
-
-.hovereffect:hover img {
--ms-transform:scale(1.2);
--webkit-transform:scale(1.2);
-transform:scale(1.2);
-}
-
-.hovereffect:hover .overlay {
-opacity:1;
-filter:alpha(opacity=100);
-}
-
-.hovereffect:hover h2,.hovereffect:hover div.details {
-opacity:1;
-filter:alpha(opacity=100);
--ms-transform:translatey(0);
--webkit-transform:translatey(0);
-transform:translatey(0);
-}
-
-.hovereffect:hover a.info {
--webkit-transition-delay:.2s;
-transition-delay:.2s;
+.card-img-overlay {
+  text-align: center;
 }
